# ChangeLog for sys-apps/calculate-lib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-lib-2.2.0.0_p20100823-r2 (25 Aug 2010)

  25 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100823-r1.ebuild,
  +calculate-lib-2.2.0.0_p20100823-r2.ebuild:
  Fix depends.

*calculate-lib-2.2.0.0_p20100823 (24 Aug 2010)

  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100819.ebuild,
  +calculate-lib-2.2.0.0_p20100823.ebuild:
  Daily update.

*calculate-lib-2.2.0.0_p20100816 (16 Aug 2010)

  16 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.0.0_p20100816.ebuild:
  New live ebuild from 2010/08/16.

*calculate-lib-2.2.0.0_p20100813-r1 (15 Aug 2010)

  15 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100813.ebuild,
  +calculate-lib-2.2.0.0_p20100813-r1.ebuild, +files/shortname-fix.patch:
  Change commit version. Add added patch.

*calculate-lib-2.2.0.0_p20100813 (13 Aug 2010)

  13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100812-r1.ebuild,
  +calculate-lib-2.2.0.0_p20100813.ebuild:
  Update live ebuild.

*calculate-lib-2.2.0.0_p20100812-r1 (13 Aug 2010)

  13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100812.ebuild,
  +calculate-lib-2.2.0.0_p20100812-r1.ebuild:
  Change depends.

*calculate-lib-2.2.0.0_p20100812 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100811-r1.ebuild,
  +calculate-lib-2.2.0.0_p20100812.ebuild:
  Update live ebuild from 12/08/2010.

*calculate-lib-2.1.9-r1 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +files/lib_i18n_path.patch, -calculate-lib-2.1.9.ebuild,
  +calculate-lib-2.1.9-r1.ebuild:
  Add path for place i18n files.

*calculate-lib-2.2.0.0_p20100811 (11 Aug 2010)
