@@ -15,7 +15,7 @@
 ~app-misc/calculate-install-gui-2.2.0.0_p20100825 amd64 x86
 ~sys-apps/calculate-client-2.2.0.0_p20100825 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100819 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100823 amd64 x86
+~sys-apps/calculate-lib-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100824 amd64 x86
 
 ~x11-libs/qtermwidget-0.1 amd64 x86
