@@ -5,5 +5,5 @@
 ~sys-apps/calculate-lib-2.2.0.0_p20100813 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100812 amd64 x86
 ~sys-apps/calculate-install-2.2.0.0_p20100826 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100823 amd64 x86
+~sys-apps/calculate-lib-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100824 amd64 x86
