@@ -11,7 +11,7 @@ EBUILD calculate-client-2.1.17-r2.ebuild 1896 RMD160 01fb62dab724750b7514cb57353
 EBUILD calculate-client-2.1.18-r3.ebuild 1994 RMD160 0f3249e43b0888e4d3ca86aaf362e312e87f18c2 SHA1 a94264745191fc573288c98e0290b9dd27b2f559 SHA256 a70a163ad73b11cd8625f6b86717dfacc69b14d9c8d2385337b7a4d564f7cf6f
 EBUILD calculate-client-2.1.18.ebuild 1695 RMD160 91c6a5f07302640ad649824ed10d6495a724df58 SHA1 6e7c10b192a02f0daeb705d93585cd5db9fbff0d SHA256 ebc7776a3c62d3d37c6d36e02d78b1ceffea826229a213047371a6fde645f84f
 EBUILD calculate-client-2.2.0.0_p20100813-r1.ebuild 1770 RMD160 cc8068bd4f68cb8909bbb9c6ca08341c5d9676ff SHA1 228a5c1abdf6dfe813017f77e6d7965665185145 SHA256 1bda9d0a22d8328c29e5144d2aa1890829fe66fae695e6aadcadfadc863843aa
-EBUILD calculate-client-2.2.0.0_p20100825.ebuild 1798 RMD160 884abd31f8acfa4c06fc93b9f25af451256ba0e3 SHA1 89914c8238232140eaddfe282fe0485d1d3a7672 SHA256 51894e262d931c8844717ad7064cf60d597fbbf94b2acb96b44a2596832b7b63
+EBUILD calculate-client-2.2.0.0_p20100825-r1.ebuild 1798 RMD160 ce62d238c32061321a23a73c92bd54dfbfc75516 SHA1 3a11cff5b4a9b414f7815f72e6587613837ae760 SHA256 85b6fd56b8d59a75e1094e9f5e6cf0ee067114338cc7438197cdda75dbb8fd23
 EBUILD calculate-client-2.2.9999.ebuild 1718 RMD160 f88304830d176bde5e48389c59664fd4f810a1f3 SHA1 d4c1a942e988304a2b5dee4842932e6b360a9f65 SHA256 86a88789729dd8c68d662d62c61dbe13cfeca74a6b1e6f1c878f6cb67f60dc41
 MISC ChangeLog 6595 RMD160 d24b897e3648bf7832319f718d2685df1594bf25 SHA1 78ac79e729a65b7488336f11325faa353b72fdfa SHA256 5b744fa0ab5d3d2899bc3605339341ba5f44be4ed9dc703035796578b0f39936
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
