@@ -17,7 +17,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE="kde xfce gnome"
 
 DEPEND="~sys-apps/calculate-desktop-2.2.0.0_p20100819
-	~sys-apps/calculate-lib-2.2.0.0_p20100823
+	~sys-apps/calculate-lib-2.2.0.0_p20100826
 	>=dev-python/python-ldap-2.0[ssl]
 	>=sys-auth/pam_ldap-180[ssl]
 	>=sys-auth/nss_ldap-239
