@@ -1,6 +1,6 @@
 AUX calculate-desktop-2.2.0.0_rc1-r1.patch 456 RMD160 f4f15ea8be06a9e0d71494f23126be5419f07685 SHA1 79dd0a07fcd6c6ec5330e6afa5dcbf6a9fa3208f SHA256 96fe2e348b986000f6d5b069543417df07af1f83099869e451764d385c6738f6
 EBUILD calculate-desktop-2.2.0.0_p20100813-r1.ebuild 1346 RMD160 583b96c387ad63a84f7c1adef31014621c84e882 SHA1 fa10b17b9c30dbbf5ff46f929c574ea5e9840d8b SHA256 914fd7ea5d217baf83582bcffdb54666b88a16a1e44ea5f6a997140653807343
-EBUILD calculate-desktop-2.2.0.0_p20100819-r2.ebuild 1145 RMD160 b55276772b89ae433f2b47a1c8c5edfdbe236bac SHA1 691f0af5eee1b9a174fb95dd083c085ddbe23bf7 SHA256 339d30fe9efe513aacd2306df6b4400a384d5bf59943b4d1bacc39740c2e13b2
+EBUILD calculate-desktop-2.2.0.0_p20100819-r3.ebuild 1145 RMD160 a1d20e24555d1d822d7b6ceb3d01f01c41c2b56d SHA1 4aaa910ef6f0762a834af73d2af8be1455823d7f SHA256 f42e47b8322c632ae1f7b31706098c00fc0c79010368a7cbed4be7286cbd2a40
 EBUILD calculate-desktop-2.2.9999.ebuild 1105 RMD160 f4e301021dde0b986beb63e09df2da7198196bee SHA1 30b0c9a44986ac670df023f47070d9a4a6bff5b4 SHA256 75657971d3049a918cb3e3286af564caa646c8ddafd8344437e84a476fccb929
 MISC ChangeLog 2531 RMD160 44683361825e0331ffc65bbd85ce127a486e3b26 SHA1 82c745cfe7b3aaafb73df43363102101f185f751 SHA256 112665869d5bac6e262878679f3f3e478a4345e6b6be0bbc2c96d963193ba2d5
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
