@@ -1,5 +1,5 @@
 EBUILD calculate-install-2.2.0.0_p20100812-r1.ebuild 516 RMD160 f68ffc6639ef15d4fee8c820e40ed38c25ad0a24 SHA1 5fbc5821ff69b54f7ea946ee1f84684a97c6b4a3 SHA256 71aa21a9bbc33a77fdeae0f9440a994e1bcedf4904afca2c30e32619ed2c7ea8
-EBUILD calculate-install-2.2.0.0_p20100826.ebuild 690 RMD160 d4b328cc5f026fafba0412a6aff390b09deec81a SHA1 f25e1e93dee5cc28b401d0184ecb8f49f4032a9e SHA256 a2dd59dc3b7b8b95077446235d59ca47f208e6b2eac405a2a4d7ba82a625a516
+EBUILD calculate-install-2.2.0.0_p20100826.ebuild 690 RMD160 d97e758ddd86b7e6cf4b2f2c50b1bc80a25bbd8b SHA1 8195317a7483ec578bfdf0748f2e2e66c328c9e8 SHA256 338c4b745823c5ad26d428d0a84bdd2cb1c8785c84d7b86737995d63c6f192ba
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
 MISC ChangeLog 3231 RMD160 0a0145b1d628cb74a8f334f48fdede308e41a3b1 SHA1 3bc04266aef5e7cb0ad339941976c419f955d48b SHA256 efe153047b991e2d46bd6c40f13d3e632ea0989668ea1f9db57a8dfb68196fcb
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
