@@ -9,8 +9,8 @@ EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb
 EBUILD calculate-lib-2.1.8-r1.ebuild 730 RMD160 a3e9d20526f3078d1f1dc8894a3ac88a090cf968 SHA1 6bc25d2449e5f54df3675311ff5211bc00dcf907 SHA256 764f5b146cc9064de5e1c920ec88b0b91c5fb696c73c853435c7f7750b8bf0db
 EBUILD calculate-lib-2.1.9-r1.ebuild 730 RMD160 04e6029a7220a267356eb463d1bad3e9e4ff0bc0 SHA1 b85072f4d22760283adecdd6b10e21ddd14ea73f SHA256 c4b9c1deb7f64426440e1f9249102cbc5d3f52603166870f1c2819ec474015d6
 EBUILD calculate-lib-2.2.0.0_p20100813-r1.ebuild 893 RMD160 76bc673f67ef3eeef0cd2b17296e51660664fcfe SHA1 06442d61fad7a70e1c8d59574c85b31a43c73a6a SHA256 7bf1385d5e812870b473bcbb65bcca61a9e81ed6c295c55bac4641ec38465fe6
-EBUILD calculate-lib-2.2.0.0_p20100823-r2.ebuild 788 RMD160 b2cf9d73055e4e13d543107157bcf18dbbb120d7 SHA1 3c7f62970f6efc146ead8c8efd0ce8c01a79f4e0 SHA256 80bcf5c61ec47ae1bf15dd49ce91087c1fa1f98c58239f6a052e48d99a8aedf2
+EBUILD calculate-lib-2.2.0.0_p20100826.ebuild 788 RMD160 cd1c8e9508aa9981cc7b4c1bc8170b5b69acc875 SHA1 79cbc51aef7346eb4c5b568345efd2624c555b8a SHA256 566e254c7f7b703c5f1fa8756825e3015ce7d366216dfcccef3ce34d481e3b58
 EBUILD calculate-lib-2.2.9999.ebuild 592 RMD160 e559e7ccafdb150093a055b4f90bf33666ab796c SHA1 752fe9e05ce1380af9a44bf5e81a56dc00f36506 SHA256 f4cf5511cca3007b735cf98871ee72442c6bf677be63349058d1bb029a4b1abf
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 3934 RMD160 7ee59d98b94d2c18dd27d0e051ad2885e3111286 SHA1 74a5b680e60bbab9775dcd1437b57794da5d4f60 SHA256 1ea290ba8f5615a6b8ea0b43165c3825eb98bb5bec2fb1f052567c38e587198f
+MISC ChangeLog 4148 RMD160 d8574e2a303ea1b3fbc37753b62c9c8a3bc956f4 SHA1 230bc55d7e72cbdbe68b055ec4d7bc80163ec4ab SHA256 287dda5094ec5aa19dba5ec636c21decd96a6ec1b1efc6725e822654888db068
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
