@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.2.0.0_p20100826 (26 Aug 2010)
+
+  26 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-lib-2.2.0.0_p20100823-r2.ebuild,
+  +calculate-lib-2.2.0.0_p20100826.ebuild:
+  Daily update.
+
 *calculate-lib-2.2.0.0_p20100823-r2 (25 Aug 2010)
 
   25 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
